modifica easy_mode

--- a/app/src/main/res/layout/easy_mode.xml
+++ b/app/src/main/res/layout/easy_mode.xml
@@ -72,6 +72,7 @@
         android:background="@drawable/back">
 
         <ImageButton
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:layout_marginBottom="5dp"
@@ -104,6 +105,7 @@
         android:layout_marginTop="3dp"
         android:textSize="22sp"
         android:textStyle="bold"
+        android:onClick="identifica"
         android:layout_centerHorizontal="true"
         android:layout_marginRight="10dp"
         android:text="Premi PLASTICA"
@@ -130,6 +132,7 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:text="300 €"
+        android:onClick="raccoltaPunti"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -286,28 +289,29 @@
         android:layout_alignParentBottom="true"
         android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
+        android:onClick="logout"
         android:layout_alignParentRight="true"
 
        >
 
-        <ImageButton
+        <ImageView
             android:id="@+id/logoEsci"
             android:layout_width="45dp"
             android:layout_height="35dp"
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="5dp"
-            android:onClick="logout"
             android:src="@drawable/sign_out_option" />
 
         <TextView
             android:id="@+id/textEsci"
-            android:layout_width="wrap_content"
+            android:layout_width="45dp"
             android:layout_height="wrap_content"
             android:layout_below="@id/logoEsci"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginTop="4dp"
             android:text="Esci"
+            android:layout_centerHorizontal="true"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="17sp"
