--- a/app/src/main/res/layout/identifica_tipologia_rifiuto.xml
+++ b/app/src/main/res/layout/identifica_tipologia_rifiuto.xml
@@ -28,7 +28,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="wrap_content"
+            android:layout_width="266dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="36dp"
