--- a/app/src/main/res/layout/tuttook_operatore_ecologico.xml
+++ b/app/src/main/res/layout/tuttook_operatore_ecologico.xml
@@ -201,8 +201,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@android:color/transparent"
-        app:itemIconTint="@color/black"
-        app:itemTextColor="@color/black"
+        app:itemIconTint="@drawable/bottom_navigation_colors_operatore_ecologico"
+        app:itemTextColor="@drawable/bottom_navigation_colors_operatore_ecologico"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/navigation_operatore_ecologico" />
 </RelativeLayout>
