--- a/app/src/main/res/layout/cambia_tipologia_rifiuto.xml
+++ b/app/src/main/res/layout/cambia_tipologia_rifiuto.xml
@@ -84,6 +84,24 @@
 
         </TableRow>
 
+        <TableRow>
+
+            <CheckBox
+                android:id="@+id/checkBox4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:onClick="checkBoxClick"
+                android:tag="Mix Rifiuti" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Mix Rifiuti" />
+
+        </TableRow>
+
+
+
     </TableLayout>
 
     <LinearLayout
