--- a/app/src/main/res/layout/home_page_operatore_ecologico.xml
+++ b/app/src/main/res/layout/home_page_operatore_ecologico.xml
@@ -21,6 +21,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:text="@string/app_name"
+                android:textColor="@color/black"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
