--- a/app/src/main/res/layout/visualizza_messaggio_operatore_ecologico.xml
+++ b/app/src/main/res/layout/visualizza_messaggio_operatore_ecologico.xml
@@ -154,19 +154,25 @@
         android:textStyle="bold|italic" />
 
 
-    <TextView
-        android:id="@+id/descrizione"
-        android:background="@drawable/back"
+    <FrameLayout
+        android:id="@+id/Frame"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="180dp"
         android:layout_below="@id/textdescrizione"
         android:layout_marginLeft="20dp"
-        android:textSize="20sp"
         android:layout_marginTop="20dp"
-        android:textColor="@color/black"
         android:layout_marginRight="20dp"
-        />
+        android:background="@drawable/back">
 
+        <TextView
+            android:id="@+id/descrizione"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="5dp"
+            android:textColor="@color/black"
+            android:textSize="20sp" />
+
+    </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
         android:id="@+id/navigationView"
