--- a/app/src/main/res/menu/navigation_operatore_ecologico.xml
+++ b/app/src/main/res/menu/navigation_operatore_ecologico.xml
@@ -8,7 +8,7 @@
     <item
         android:id="@+id/segnalazioni_operatore_ecologico"
         android:icon="@drawable/alert"
-        android:title="Segnalazioni Effettuate"/>
+        android:title="Segnalazioni"/>
 
     <item
         android:id="@+id/avvisi_operatore_ecologico"
