--- a/app/src/main/res/layout/segnalazione_element.xml
+++ b/app/src/main/res/layout/segnalazione_element.xml
@@ -5,6 +5,7 @@
 
     <LinearLayout
         android:id="@+id/linear1"
+        android:layout_marginTop="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linear1"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:orientation="horizontal">
 
         <TextView
@@ -66,7 +68,7 @@
         android:layout_width="50dp"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="11dp"
+        android:layout_marginTop="15dp"
         android:layout_marginRight="10dp"
         android:background="@android:color/transparent"
         android:onClick="mostraSegnalazione"
