--- a/app/src/main/res/layout/segnalazioni_operatore_ecologico.xml
+++ b/app/src/main/res/layout/segnalazioni_operatore_ecologico.xml
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/textView"
-            android:layout_width="138dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -38,7 +38,7 @@
             android:text="Segnalazioni"
             android:textAlignment="center"
             android:textColor="@color/black"
-            android:textSize="22sp"
+            android:textSize="24sp"
             android:textStyle="bold|italic" />
 
 
