--- a/app/src/main/res/layout/nuovo_avviso.xml
+++ b/app/src/main/res/layout/nuovo_avviso.xml
@@ -94,6 +94,8 @@
             android:layout_marginTop="18dp">
 
             <CheckBox
+                android:id="@+id/operatoreCheck"
+                android:onClick="onOperatoreClick"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -115,6 +117,8 @@
             android:layout_marginTop="10dp">
 
             <CheckBox
+                android:onClick="onCittadinoClick"
+                android:id="@+id/cittadinoCheck"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
@@ -137,7 +141,7 @@
         android:layout_below="@id/relative2"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="40dp"
-        android:text=" Destinatario "
+        android:text=" Descrizione "
         android:textColor="@color/black"
         android:textSize="20sp"
         android:textStyle="bold|italic" />
@@ -153,7 +157,7 @@
         android:background="@drawable/back">
 
         <EditText
-            android:id="@+id/infrazioni"
+            android:id="@+id/descrizione"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="5dp"
