--- a/app/src/main/res/layout/home_page_dipendente_comunale.xml
+++ b/app/src/main/res/layout/home_page_dipendente_comunale.xml
@@ -241,13 +241,11 @@
         android:orientation="vertical">
 
         <android.support.design.widget.FloatingActionButton
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="bottom|right"
-            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|center"
             android:onClick="nuovoAvviso"
-            android:layout_marginRight="18dp"
-            app:layout_anchorGravity="bottom|right|end" />
+            android:src="@drawable/white_plus" />
 
         <TextView
             android:layout_width="wrap_content"
