--- a/app/src/main/res/layout/activity_toast_custom_view.xml
+++ b/app/src/main/res/layout/activity_toast_custom_view.xml
@@ -7,7 +7,7 @@
     android:padding="10dp">
 
 
-    <android.support.v7.widget.CardView
+  <!--  <android.support.v7.widget.CardView
 
         android:layout_width="200dp"
         android:layout_height="55dp"
@@ -29,6 +29,6 @@
         android:text="Segnalazione inviata"
         android:textSize="20dp" />
 
-    </android.support.v7.widget.CardView>
+    </android.support.v7.widget.CardView>-->
 
 </LinearLayout>
