--- a/app/src/main/res/layout/home_page_dipendente_comunale.xml
+++ b/app/src/main/res/layout/home_page_dipendente_comunale.xml
@@ -244,8 +244,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
-            android:onClick="nuovoAvviso"
-            android:src="@drawable/white_plus" />
+            android:onClick="nuovoAvviso" />
 
         <TextView
             android:layout_width="wrap_content"
