add invia segnalazione

--- a/app/src/main/res/layout/cerca_cittadino.xml
+++ b/app/src/main/res/layout/cerca_cittadino.xml
@@ -68,13 +68,13 @@
 
     <ListView
         android:id="@+id/listRicerche"
+        style="@style/Widget.AppCompat.Light.ListView.DropDown"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/ultimeRicerche"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
         android:layout_above="@id/navigationView"
-        >
+        android:layout_below="@id/ultimeRicerche"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp">
 
     </ListView>
 
